networkmanager: Fix interface table alignment

--- a/pkg/networkmanager/networking.scss
+++ b/pkg/networkmanager/networking.scss
@@ -94,9 +94,10 @@ th {
     th[data-label=Name] button {
         font-weight: var(--pf-global--FontWeight--bold);
 
+        // Preserve the same baseline as other elements, so items align
+        display: inline;
         // Expand the link to the container, for easier clickability
-        display: block;
-        text-align: left;
+        width: 100%;
     }
 }
 
